2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBindingCompilerServices.cs:
	* Gui/ProjectConfigurationPropertyPanel.cs:
	* JavaLanguageBinding.cs:
	* JavaBinding.addin.xml:
	* ProjectTreeBuilder/JavaNodeBuilder.cs: Follow architecture changes.
	
	* JavaCompilerParameters.cs: Moved some parameters and enum
	definitions to DotNetProjectConfiguration.
	
	* Project/JavaProject.cs: Removed. Not needed any more.
	* Makefile.am: Updated.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBindingCompilerServices.cs: StatusBarService.ProgressMonitor is
	not a StatusBar widget any more.

2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>

	* JavaLanguageBinding.cs: Added CommentTag to be used by (Un)CommentCode

2004-11-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/Parser.cs: Added HandlesFileExtension() to work with new
	IParser

2004-07-05  John Luke  <jluke@cfl.rr.com>

	* *.cs: cleanup everything
	remove single file compile/run
	remove runtime choices and use ikvmc to produce assemblies

	need to check errors on ikvmc part, I wish there was a better
	way than screen-scraping to do this.

	convert line endings to unix, not sure why they were dos style

2004-06-08  John Luke  <jluke@cfl.rr.com>

	* JavaBindingCompilerService.cs: rework so Process.Start works
	* JavaBindingExecutionService.cs: rework so Process.Start works
	by using ProcessStartInfo (cmd, args)
	add support for using Gij
	* Gui/ProjectConfigurationPropertyPanel.cs:
	enable Java, remove Mono, and add Gij runtimes
	* JavaRuntime.cs: add Gij

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* JavaLanguageBinding.cs: signature change for GenerateMakefile.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* JavaLanguageBinding.cs: stubbing GenerateMakefile.

2004-04-16  John Luke  <jluke@cfl.rr.com>

	* JavaBindingCompilerService.cs:
	rework error parsing to work off of Streams instead of temp files
	allows javac errors to work, gcj maybe not	