@@ -19,14 +19,12 @@ using MonoDevelop.Internal.Project;
 using MonoDevelop.Gui;
 using MonoDevelop.Gui.Pads.ProjectBrowser;
 using MonoDevelop.Gui.Widgets;
+using MonoDevelop.Services;
 
 namespace JavaBinding
 {
 	public class JavaNodeBuilder : IProjectNodeBuilder
 	{
-		FileUtilityService fileUtilityService = (FileUtilityService)ServiceManager.GetService(typeof(FileUtilityService));
-		IconService iconService = (IconService)ServiceManager.GetService(typeof(IconService));
-		
 		public bool CanBuildProjectTree(Project project)
 		{
 			DotNetProject dp = project as DotNetProject; 
@@ -42,14 +40,12 @@ namespace JavaBinding
 			// create 'empty' directories			
 			for (int i = 0; i < project.ProjectFiles.Count; ++i) {
 				if (project.ProjectFiles[i].Subtype == Subtype.Directory) {
-					string directoryName   = fileUtilityService.AbsoluteToRelativePath(project.BaseDirectory, project.ProjectFiles[i].Name);
+					string directoryName = Runtime.FileUtilityService.AbsoluteToRelativePath (project.BaseDirectory, project.ProjectFiles[i].Name);
 
 					// if directoryname starts with ./ oder .\
 					if (directoryName.StartsWith(".")) {
 						directoryName =  directoryName.Substring(2);
 					}
-					
-					string parentDirectory = Path.GetFileName(directoryName);
 					
 					AbstractBrowserNode currentPathNode = GetPath(directoryName, projectNode, true);
 					
@@ -58,7 +54,6 @@ namespace JavaBinding
 					//newFolderNode.ClosedImage = resourceService.GetBitmap ("Icons.16x16.ClosedFolderBitmap");
 					
 					currentPathNode.Nodes.Add(newFolderNode);
-				
 				}
 			}
 			
@@ -67,18 +62,13 @@ namespace JavaBinding
 				if (project.ProjectFiles[i].Subtype != Subtype.Directory) {
 					ProjectFile fileInformation = project.ProjectFiles[i];
 					
-					string relativeFile = fileUtilityService.AbsoluteToRelativePath(project.BaseDirectory, fileInformation.Name);
-					
-					string fileName     = Path.GetFileName(fileInformation.Name);
+					string relativeFile = Runtime.FileUtilityService.AbsoluteToRelativePath (project.BaseDirectory, fileInformation.Name);
 					
 					switch (fileInformation.BuildAction) {
-						
 						case BuildAction.Exclude:
 							break;
-						
 						default:
 							AbstractBrowserNode currentPathNode = GetPath(relativeFile, projectNode, true);
-							
 							AbstractBrowserNode newNode = new FileNode(fileInformation);
 							newNode.ContextmenuAddinTreePath = FileNode.ProjectFileContextMenuPath;
 							currentPathNode.Nodes.Add(newNode);
@@ -116,7 +106,7 @@ namespace JavaBinding
 				
 				if (node == null) {
 					if (create) {
-						DirectoryNode newFolderNode  = new DirectoryNode(fileUtilityService.GetDirectoryNameWithSeparator(ConstructFolderName(curpathnode)) + path);
+						DirectoryNode newFolderNode  = new DirectoryNode(Runtime.FileUtilityService.GetDirectoryNameWithSeparator (ConstructFolderName (curpathnode)) + path);
 						curpathnode.Nodes.Add(newFolderNode);
 						curpathnode = newFolderNode;
 						continue;
